Fixed the image spacing on medium screen widths (laptop)

--- a/static/scss/pages/_home.scss
+++ b/static/scss/pages/_home.scss
@@ -99,7 +99,7 @@
   }
 
   img {
-    width: 50vw;
+    max-width: 100%;
     position: relative;
     grid-column-start: 5;
     grid-column-end: 13;
@@ -129,9 +129,9 @@
     }
     @include media(">=tablet", "<=fellowship-container-cutoff") {
       grid-column-start: 2;
-      grid-column-end: 9;
-      grid-row-start: 2;
-      grid-row-end: 13;
+      grid-column-end: 7;
+      grid-row-start: 3;
+      grid-row-end: 11;
     }
 
     .content {
